cabal-version:      2.4
name:               rollerbot
version:            0.1.0

synopsis: dice rolling discord bot

-- A longer description of the package.
description: roll arbitrary numbers of dice of arbitrary face count, i.e. "!roll 5d8" to role 5 8-sided dice.
             receive a discord embed back with the results

-- A URL where users can report bugs.
-- bug-reports:

license:            MIT
author:             LtPeriwinkle
maintainer:         not.yet.periwinkle@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable rollerbot
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
    build-depends:    base ^>=4.14.1.0,
                      text,
                      discord-haskell ^>=1.8.5,
                      unliftio ^>=0.2.14,
                      text-conversions ^>=0.3.1,
                      random ^>=1.2.0
    hs-source-dirs:   app
    ghc-options: -threaded
    default-language: Haskell2010
